Added JEI Support
Also Fixed:
-added bop cherry recipes, because of wrong usage of map
-fixed byg araucaria recipe, used wrong output. Also wrong usage of map
-fixed some code smell ewww garlic
-added registryname of fluid in fluidtank on hover if advancedItemTooltips are visible
-made Pair<Integer, Integer> to Vector2i where applicable
-added clientSideOnlyIntegration with safe Client Access
-removed unused accesstransformer