@@ -3,15 +3,17 @@ package software.bernie.techarium.trait.block;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.SneakyThrows;
+import lombok.experimental.UtilityClass;
 import net.minecraft.block.AbstractBlock;
 import net.minecraft.block.BlockRenderType;
 import net.minecraft.tileentity.TileEntity;
 import net.minecraftforge.common.ToolType;
 import software.bernie.techarium.trait.Trait;
 
+@UtilityClass
 public class BlockTraits {
-    public static abstract class MaterialTrait extends Trait {
-        public MaterialTrait() {
+    public abstract static class MaterialTrait extends Trait {
+        protected MaterialTrait() {
             this.addTweaker(AbstractBlock.Properties.class, this::tweakProperties);
         }
         protected abstract void tweakProperties(AbstractBlock.Properties properties);
@@ -30,7 +32,7 @@ public class BlockTraits {
 
         @SneakyThrows
         public T createTileEntity() {
-            return tileClass.newInstance();
+            return tileClass.getDeclaredConstructor().newInstance();
         }
     }
 
@@ -40,7 +42,7 @@ public class BlockTraits {
     }
 
     @Data
-    public static class BlockRenderTypeTrait extends Trait{
+    public static class BlockRenderTypeTrait extends Trait {
         private final BlockRenderType blockRenderType;
     }
 }
